--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "verifinet",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "A fact-checking and crisis mapping platform",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
@@ -10,20 +11,26 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "@supabase/supabase-js": "^2.39.0",
     "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "morgan": "^1.10.0",
-    "openai": "^4.28.0",
-    "tweetnacl": "^1.0.3"
+    "multer": "^1.4.5-lts.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3",
-    "eslint": "^8.56.0"
-  }
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2"
+  },
+  "keywords": [
+    "fact-checking",
+    "crisis-mapping",
+    "verification",
+    "journalism"
+  ],
+  "author": "",
+  "license": "MIT"
 }
